@@ -1,0 +1,30 @@
+\label{\detokenize{tabular:simple-table}}
+
+\begin{savenotes}\sphinxattablestart
+\centering
+\begin{tabulary}{\linewidth}[t]{TT}
+\hline
+\sphinxstyletheadfamily 
+header1
+&\sphinxstyletheadfamily 
+header2
+\\
+\hline
+cell1\sphinxhyphen{}1
+&
+cell1\sphinxhyphen{}2
+\\
+\hline
+cell2\sphinxhyphen{}1
+&
+cell2\sphinxhyphen{}2
+\\
+\hline
+cell3\sphinxhyphen{}1
+&
+cell3\sphinxhyphen{}2
+\\
+\hline
+\end{tabulary}
+\par
+\sphinxattableend\end{savenotes}
