@@ -34,6 +34,8 @@ Features added
 * LaTeX: Make the ``toplevel_sectioning`` setting optional in LaTeX theme
 * LaTeX: Allow to override papersize and pointsize from LaTeX themes
 * LaTeX: Add :confval:`latex_theme_options` to override theme options
+* #6740: LaTeX: Support tables without column rules via a theme option:
+  ``show_table_column_rules``
 * #7410: Allow to suppress "circular toctree references detected" warnings using
   :confval:`suppress_warnings`
 * C, added scope control directives, :rst:dir:`c:namespace`,
